--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,9 @@ body {
   font-style: normal;
 }
 
+.contact {
+  color: var(--slate);
+}
 .link {
   list-style-type: none; /*remove bullet point to all list class*/
   color: var(--slate);
@@ -147,8 +150,50 @@ body {
   cursor: pointer;
 }
 
+/* headings style section*/
+
+.header {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1440px;
+  height: 72px;
+  padding: 24px 156px;
+  border-bottom: 1px solid var(--CORNFLOWER, #e7e9fc);
+  background: var(--WHITE, #fff);
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
 .header .link {
   margin: 0; /* removing spaces between contact */
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  color: var(--slate);
+  gap: 40px;
+}
+
+.header .active {
+  color: var(--ocean);
+}
+
+.active::after {
+  content: " ";
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--iris);
+  position: relative;
+  top: 20px;
 }
 
 /* end of header style */
@@ -196,6 +241,45 @@ body {
 .main-btn:focus {
   background-color: var(--ocean);
 }
+
+.backdrop {
+  /* the screen protector */
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal {
+  background-color: var(--white);
+  width: 408px;
+  height: 584px;
+  border-radius: 4px;
+  padding: 24px;
+  text-align: end;
+}
+
+.is-hidden {
+  pointer-events: none;
+  opacity: 0;
+}
+
+.modal-close-btn {
+  border-radius: 100%;
+  border: 1px solid rbga(0, 0, 0, 0.1);
+  background-color: var(--cornflower);
+  width: 30px;
+  height: 30px;
+  color: var(--navy_blue);
+  margin-top: 24px;
+  margin-right: 24px;
+}
+
 /* end of button style */
 
 /* team style section */
@@ -318,48 +402,6 @@ body {
   line-height: 40px;
   letter-spacing: 0.72px;
   text-transform: capitalize;
-}
-
-/* headings style section*/
-
-.header {
-  box-sizing: border-box;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 1440px;
-  height: 72px;
-  padding: 24px 156px;
-  border-bottom: 1px solid var(--CORNFLOWER, #e7e9fc);
-  background: var(--WHITE, #fff);
-  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
-}
-
-.header-nav {
-  display: flex;
-  align-items: center;
-}
-
-.header .link {
-  margin: 0;
-  padding: 20px;
-  display: flex;
-  align-items: center;
-}
-
-.header .link-list {
-  margin-right: 10 px;
-}
-
-.header .link-list:last-child {
-  margin-right: 0;
-  margin-left: 20px; /* to add space between class link-list*/
-}
-
-.header-nav .link-web {
-  margin-right: 20px;
 }
 
 /* Customer section*/
@@ -519,4 +561,34 @@ body {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.Application-list:hover .application-image-caption {
+  /*when you hover the 'li', the application-image-caption class will show*/
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.application-image {
+  position: relative;
+  display: block; /*to fully cover the image and you cannot see white*/
+  overflow: hidden;
+}
+
+.application-image-caption {
+  background-color: rgba(77, 90, 229, 1);
+  color: var(--cloud);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  text-align: center;
+  opacity: 0; /*not visible this class */
+  transform: translateY(100%); /*makesure 'translateY(100%)' no space */
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.image-caption {
+  padding: 40px 32px;
 }
